package br.edu.unipampa.usina.alarmes;

import br.edu.unipampa.usina.controlereator.MedicaoReator;

/** Factory de alarmes — implementação no Marco 2. */
public class AlarmeFactory {
    public Alarme criar(MedicaoReator medicao, String tipo) {
        throw new UnsupportedOperationException("Marco 2");
    }
}
