@startuml classes-projeto-mvp
title Classes de Projeto — núcleo Java implementado no MVP
skinparam classAttributeIconSize 0
skinparam shadowing false

package "infraestruturaeventos" {
  interface EventoDominio {
    +tipo(): String
    +ocorridoEm(): Instant
    +resumo(): String
  }

  interface IEventSubscriber {
    +onEvento(evento: EventoDominio): void
  }

  class EventBus {
    +assinarTodos(subscriber: IEventSubscriber): void
    +assinar(tipo: Class, subscriber: IEventSubscriber): void
    +publicar(evento: EventoDominio): void
  }

  class MedicaoRegistrada <<record>>
  class ObservacaoRegistrada <<record>>
  class FalhaSensorDetectada <<record>>
  class AlarmeEmitido <<record>>
  class AlarmeReconhecido <<record>>
  class AlarmeResolvido <<record>>

  MedicaoRegistrada ..|> EventoDominio
  ObservacaoRegistrada ..|> EventoDominio
  FalhaSensorDetectada ..|> EventoDominio
  AlarmeEmitido ..|> EventoDominio
  AlarmeReconhecido ..|> EventoDominio
  AlarmeResolvido ..|> EventoDominio
  EventBus --> IEventSubscriber : notifica
}

package "controlereator" {
  class ReatorFacade {
    +registrarSensor(sensor: Sensor): void
    +obterSensor(sensorId: long): Sensor
    +receberLeitura(sensorId: long, valor: double): MedicaoReator
    +simularFalhaSensor(sensorId: long, motivo: String): void
    +consultarHistorico(): List<MedicaoReator>
  }

  class Sensor <<record>> {
    +isNaFaixaObservacao(valor: double): boolean
  }

  class MedicaoReator {
    -valor: double
    -timestamp: Instant
    -sensor: Sensor
    +registrarMedicao(valor: double, sensor: Sensor, timestamp: Instant): void
    +getValor(): double
    +getTimestamp(): Instant
    +getSensor(): Sensor
  }

  ReatorFacade "1" o-- "*" Sensor : sensores em memória
  ReatorFacade "1" o-- "*" MedicaoReator : histórico em memória
  MedicaoReator --> Sensor
  ReatorFacade ..> EventBus : publica
  ReatorFacade ..> MedicaoRegistrada
  ReatorFacade ..> ObservacaoRegistrada
  ReatorFacade ..> FalhaSensorDetectada
}

package "alarmes" {
  interface AvaliadorLimiar {
    +foraDaFaixaSegura(medicao: MedicaoRegistrada): boolean
  }

  class AvaliadorFaixaSegura {
    +foraDaFaixaSegura(medicao: MedicaoRegistrada): boolean
  }

  class AlarmeFactory {
    +criar(medicao: MedicaoRegistrada): Alarme
  }

  class AlarmeFacade {
    +onEvento(evento: EventoDominio): void
    +processarAvaliacao(medicao: MedicaoRegistrada, violado: boolean): Alarme
    +reconhecerAlarme(id: String, operador: String, justificativa: String): boolean
    +resolverAlarme(id: String, responsavel: String, solucao: String): boolean
    +consultarAlarmes(): List<Alarme>
  }

  class Alarme {
    +emitirAlerta(destinatarios: List<String>): void
    +registrarEvento(): void
    +reconhecer(operador: String, justificativa: String): void
    +resolver(responsavel: String, solucao: String): void
  }

  AvaliadorFaixaSegura ..|> AvaliadorLimiar
  AlarmeFacade ..|> IEventSubscriber
  AlarmeFacade --> AvaliadorLimiar
  AlarmeFacade --> AlarmeFactory
  AlarmeFacade "1" o-- "*" Alarme : em memória
  AlarmeFactory ..> Alarme : cria
  Alarme --> MedicaoRegistrada : origem
  AlarmeFacade ..> EventBus : consome/publica
}

package "auditorialogs" {
  class AuditoriaSubscriber {
    +onEvento(evento: EventoDominio): void
  }

  class RegistroAuditoria {
    +registrar(evento: EventoDominio): EntradaAuditoria
    +consultar(): List<EntradaAuditoria>
    +verificarIntegridade(): boolean
    +verificarIntegridadeArquivo(): boolean
  }

  class EntradaAuditoria <<record>> {
    +linhaPersistida(): String
    +hashCurto(): String
  }

  AuditoriaSubscriber ..|> IEventSubscriber
  AuditoriaSubscriber --> RegistroAuditoria
  RegistroAuditoria "1" o-- "*" EntradaAuditoria
}

note right of RegistroAuditoria
  Persiste em dados/auditoria.log.
  Cada entrada encadeia o hash anterior.
end note

@enduml
